@@ -59,7 +59,7 @@ MOSTLYCLEANFILES =				\
   lena-mask-channel.ppm				\
   lena-fill??????.ppm				\
   lena-fill-lazy??????.ppm			\
-  lena-bft??????.pbm				\
+  picasso-bft??????.pbm				\
   lena-wst??????.ppm				\
   lena-roi-fill??????.ppm			\
   tmp_clo.pgm					\
